[workspace]
resolver = "3"
members = [
    "textus",
    "textus-derive",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Jezza <jeremy.a.barrow@gmail.com>"]
license = "MIT"

[workspace.dependencies]
textus        = { version = "0.1.0", path = "./textus" }
textus-derive = { version = "0.1.0", path = "./textus-derive" }

syn         = { version = "2" }
quote       = { version = "1"  }
proc-macro2 = { version = "1" }